--- a/styles.css
+++ b/styles.css
@@ -249,6 +249,7 @@ nav {
   padding-bottom: 24px;
   position: absolute;
   right: 0;
+  background-color: var(--white);
   
 }
 .product-asaid-close {
